# model_api

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  index.html  pyproject.toml  webui.py
.github/: CODEOWNERS  dependabot.yml  labeler.yml  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  collect-sbom-library.yaml  docs.yml  pr-labeler.yml  pre_commit.yml  publish.yaml  renovate-config-validator.yml  renovate.yml  scorecards.yml  security-scan.yml  test_accuracy.yml  test_precommit.yml
benchmark/: README_template.md  export_yolo.py  models.md
benchmark/Resnet-18-Classification-fp16-ov/: resnet18.xml
benchmark/Resnet-50-Classification-fp16-ov/: resnet50.xml
benchmark/YOLOv11-Detection-m-int8-ov/: README.md  metadata.yaml  yolo11m.xml
benchmark/YOLOv11-Detection-n-int8-ov/: README.md  metadata.yaml  yolo11n.xml
benchmark/YOLOv11-Detection-s-int8-ov/: README.md  metadata.yaml  yolo11s.xml
docs/source/: conf.py
examples/asynchronous_api/: run.py
examples/cpp/: CMakeLists.txt  README.md  main.cpp
examples/metrics/: README.md  benchmark.py
examples/serving_api/: README.md  run.py
examples/synchronous_api/: run.py
examples/visual_prompting/: README.md  run.py
examples/zsl_visual_prompting/: README.md  run.py
master/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
master/_sources/: index.md.txt
master/adapters/: index.html  inference_adapter.html  onnx_adapter.html  openvino_adapter.html  ovms_adapter.html  utils.html
master/cpp/: index.html
master/guides/: index.html  model-configuration.html  nms-enablement.html  performance_metrics.html
master/models/: action_classification.html  anomaly.html  classification.html  detection_model.html  image_model.html  index.html  instance_segmentation.html  keypoint_detection.html  model.html  sam_models.html  (+6 more)
model_api/: pyproject.toml
model_converter/: README.md  pyproject.toml
model_converter/examples/: config.json
model_converter/presets/: config.json  datasets.json
model_converter/src/model_converter/: __init__.py  __main__.py  cli.py  dataset_registry.py  model_converter.py  reporting.py
model_converter/src/model_converter/adapters/: __init__.py  base.py  maskrcnn.py
model_converter/src/model_converter/converters/: __init__.py  base.py  getitune.py  pytorch.py  registry.py  timm.py  torchvision.py  yolo.py
model_converter/src/model_converter/datasets/: __init__.py  ade20k.py  base.py  class_folder.py  coco.py  factory.py
model_converter/src/model_converter/downloaders/: __init__.py  base.py  huggingface.py  url.py
model_converter/src/model_converter/metrics/: __init__.py  base.py  classification.py  coco_detection.py  factory.py  multilabel.py  semseg_miou.py
model_converter/src/model_converter/templates/: README-getitune-fp16.md  README-getitune-int8.md  README-timm-fp16.md  README-timm-int8.md  README-torchvision-fp16.md  README-torchvision-int8.md  README-yolo-fp16.md  README-yolo-int8.md
model_converter/src/model_converter/yolo/: __init__.py  yolo.py
model_converter/tests/: test_models.py
model_converter/tests/unit/: conftest.py  test_adapters.py  test_cli.py  test_converters.py  test_dataset_registry.py  test_downloaders.py  test_entrypoints.py  test_getitune.py  test_registry.py  test_reporting.py  test_yolo.py
model_converter/tests/unit/datasets/: test_ade20k.py  test_class_folder.py  test_coco.py  test_factory.py
model_converter/tests/unit/metrics/: test_classification.py  test_coco_detection.py  test_factory.py  test_multilabel.py  test_semseg_miou.py
src/: README.md
src/cpp/: CMakeLists.txt  install_dependencies.sh
src/cpp/include/adapters/: inference_adapter.h  openvino_adapter.h
src/cpp/include/tasks/: anomaly.h  classification.h  detection.h  instance_segmentation.h  keypoint_detection.h  results.h  segment_anything.h  semantic_segmentation.h  visual_prompting.h
src/cpp/include/tasks/classification/: resolvers.h
src/cpp/include/tasks/detection/: ssd.h
src/cpp/include/tasks/segment_anything/: mask_predictor.h
src/cpp/include/utils/: async_infer_queue.h  config.h  math.h  nms.h  preprocessing.h  tensor.h  tiling.h  vision_pipeline.h
src/cpp/models/include/models/: anomaly_model.h  base_model.h  classification_model.h  detection_model.h  detection_model_ssd.h  detection_model_yolo.h  detection_model_yolov3_onnx.h  detection_model_yolox.h  image_model.h  instance_segmentation.h  keypoint_detection.h  results.h  segmentation_model.h
src/cpp/models/src/: anomaly_model.cpp  base_model.cpp  classification_model.cpp  detection_model.cpp  detection_model_ext.cpp  detection_model_ssd.cpp  detection_model_yolo.cpp  detection_model_yolov3_onnx.cpp  detection_model_yolox.cpp  image_model.cpp  instance_segmentation.cpp  keypoint_detection.cpp  segmentation_model.cpp
src/cpp/py_bindings/: .gitignore  CMakeLists.txt  Dockerfile.ubuntu  Dockerfile_test.ubuntu  OpenCVDependencies.cmake  README.md  opencv.cmake  pyproject.toml  run.py  scratch.py
src/cpp/py_bindings/src/vision_api/: __init__.py  py_base.cpp  py_classification.cpp  py_vision_api.cpp
src/cpp/src/adapters/: openvino_adapter.cpp
src/cpp/src/tasks/: anomaly.cpp  classification.cpp  detection.cpp  instance_segmentation.cpp  keypoint_detection.cpp  segment_anything.cpp  semantic_segmentation.cpp  visual_prompting.cpp
src/cpp/src/tasks/classification/: resolvers.cpp
src/cpp/src/tasks/detection/: ssd.cpp
src/cpp/src/tasks/segment_anything/: mask_predictor.cpp
src/cpp/src/utils/: async_infer_queue.cpp  config.cpp  preprocessing.cpp  tensor.cpp
src/cpp/tilers/include/tilers/: detection.h  instance_segmentation.h  semantic_segmentation.h  tiler_base.h
src/cpp/tilers/src/: detection.cpp  instance_segmentation.cpp  semantic_segmentation.cpp  tiler_base.cpp
src/cpp/utils/include/utils/: ocv_common.hpp
src/cpp/utils/src/: image_utils.cpp
test_build/: objects.inv  py-modindex.html
tests/cpp/precommit/: CMakeLists.txt  test_model_config.cpp  test_sanity.cpp
(+537 files in other folders)
