[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "vision_api"
version = "0.0.1"
description = "set of wrapper classes for particular tasks and model architectures, simplifying data preprocess and postprocess as well as routine procedures"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Ronald Hecker", email = "ronald.hecker@intel.com" },
]
classifiers = [
    "License :: BSD",
]
# Optional: runtime dependency specification
dependencies = [
    "openvino>=2025.0",
    "opencv-python-headless",
]

[project.urls]
Homepage = "https://github.com/open-edge-platform/model_api"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"
# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
sdist.include = ["*.so*"]
